--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "14.1.0",
@@ -56,6 +58,7 @@
     "lucide-react": "^0.446.0",
     "next": "14.1.0",
     "next-themes": "^0.3.0",
+    "pg": "^8.15.6",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
@@ -70,5 +73,10 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.15.1",
+    "drizzle-kit": "^0.31.1",
+    "tsx": "^4.19.4"
   }
 }
